// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// (-- api-linter: all=disabled
//     aip.dev/not-precedent: This file needs to be updated to comply with AIPs.
//     --)
//  TODO(world-federation-of-advertisers/cross-media-measurement#2777): Update
//  to comply AIPs.

syntax = "proto3";

package wfa.measurement.securecomputation.impressions;

import "google/api/field_behavior.proto";

option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "EncryptedDekProto";

// Message representing an encrypted dek
message EncryptedDek {
  // The URI for the key encryption key used with KMS
  string kek_uri = 1 [(google.api.field_behavior) = REQUIRED];

  // Protobuf type URL of the serialized key.
  //
  // This must be either "type.googleapis.com/google.crypto.tink.Keyset"
  // or
  // "type.googleapis.com/wfa.measurement.edpaggregator.v1alpha.EncryptionKey".
  string type_url = 2;

  enum ProtobufFormat {
    PROTOBUF_FORMAT_UNSPECIFIED = 0;
    BINARY = 1;
    JSON = 2;
  }
  ProtobufFormat protobuf_format = 3;

  // DEK ciphertext encrypted with [kek_uri][].
  //
  // The plaintext is a protobuf message of type [type_url][] serialized in [protobuf_format][].
  bytes ciphertext = 4;

}
